Created structure for cards, including class names for all block elements

--- a/index.html
+++ b/index.html
@@ -27,6 +27,57 @@
 
 	<!-- Start <article> 1 -->
 	<article>
+		<header class="card_title">
+			<h1>[Title 1]</h1>
+		</header>
+
+		<section class="product">		<!-- Begin <section> .product -->
+
+			<figure class="product_img">
+				<img src="">
+				<figcaption></figcaption>
+			</figure>
+
+			<div class="product_desc">
+			</div>
+
+			<div class="product_avail">
+			</div>
+
+		</section>									<!-- End <section> .product -->
+
+		<section class="specs">			<!-- Begin <section> .specs -->
+
+			<header class="specs_title">
+				<h2>Specifications</h2>
+			</header>
+
+			<div class="specs_size">
+			</div>
+
+			<div class="specs_size">
+			</div>
+
+			<footer class="specs_foot">
+			</footer>
+
+		</section>									<!-- End <section> .specs -->
+
+		<section class-"pricing">		<!-- Begin <section> .pricing -->
+
+			<header class="pricing_title">
+			</header>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+		</section>									<!-- End <section> .pricing -->
 
 	</article>
 	<!-- End <article> 1 -->
@@ -34,6 +85,57 @@
 
 	<!-- Start <article> 2 -->
 	<article>
+		<header class="card-title">
+			<h1>[Title 2]</h1>
+		</header>
+
+		<section class="product">		<!-- Begin <section> .product -->
+
+			<figure class="product_img">
+				<img src="">
+				<figcaption></figcaption>
+			</figure>
+
+			<div class="product_desc">
+			</div>
+
+			<div class="product_avail">
+			</div>
+
+		</section>									<!-- End <section> .product -->
+
+		<section class="specs">			<!-- Begin <section> .specs -->
+
+			<header class="specs_title">
+				<h2>Specifications</h2>
+			</header>
+
+			<div class="specs_size">
+			</div>
+
+			<div class="specs_size">
+			</div>
+
+			<footer class="specs_foot">
+			</footer>
+
+		</section>									<!-- End <section> .specs -->
+
+		<section class-"pricing">		<!-- Begin <section> .pricing -->
+
+			<header class="pricing_title">
+			</header>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+		</section>									<!-- End <section> .pricing -->
 
 	</article>
 	<!-- End article 2 -->
@@ -41,6 +143,57 @@
 
 	<!-- Start article 3 -->
 	<article>
+		<header class="card-title">
+			<h1>[Title 3]</h1>
+		</header>
+
+		<section class="product">		<!-- Begin <section> .product -->
+
+			<figure class="product_img">
+				<img src="">
+				<figcaption></figcaption>
+			</figure>
+
+			<div class="product_desc">
+			</div>
+
+			<div class="product_avail">
+			</div>
+
+		</section>									<!-- End <section> .product -->
+
+		<section class="specs">			<!-- Begin <section> .specs -->
+
+			<header class="specs_title">
+				<h2>Specifications</h2>
+			</header>
+
+			<div class="specs_size">
+			</div>
+
+			<div class="specs_size">
+			</div>
+
+			<footer class="specs_foot">
+			</footer>
+
+		</section>									<!-- End <section> .specs -->
+
+		<section class-"pricing">		<!-- Begin <section> .pricing -->
+
+			<header class="pricing_title">
+			</header>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+		</section>									<!-- End <section> .pricing -->
 
 	</article>
 	<!-- End article 3 -->
@@ -48,9 +201,61 @@
 
 	<!-- Start article 4 -->
 	<article>
+		<header class="card-title">
+			<h1>[Title 4]</h1>
+		</header>
+
+		<section class="product">		<!-- Begin <section> .product -->
+
+			<figure class="product_img">
+				<img src="">
+				<figcaption></figcaption>
+			</figure>
+
+			<div class="product_desc">
+			</div>
+
+			<div class="product_avail">
+			</div>
+
+		</section>									<!-- End <section> .product -->
+
+		<section class="specs">			<!-- Begin <section> .specs -->
+
+			<header class="specs_title">
+				<h2>Specifications</h2>
+			</header>
+
+			<div class="specs_size">
+			</div>
+
+			<div class="specs_size">
+			</div>
+
+			<footer class="specs_foot">
+			</footer>
+
+		</section>									<!-- End <section> .specs -->
+
+		<section class-"pricing">		<!-- Begin <section> .pricing -->
+
+			<header class="pricing_title">
+			</header>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+			<div class="pricing_qty">
+			</div>
+
+		</section>									<!-- End <section> .pricing -->
 
 	</article>
-	<!-- Start article 4 -->
+	<!-- End article 4 -->
+
 </div>
 
 
