Created footer and forced to bottom of page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- This <div> id #wrapper will group all of the main content in the body. Its direct children are the article cards.
 		 "#wrapper: padding-top" is set to 100px to push the #wrapper out from under the header. 														-->
-	<div id="wrapper">
+	<div id="wrapper" class="clearfix">
 
 	<!-- Start <article> 1 -->
 	<article>
@@ -85,7 +85,7 @@
 
 	<!-- Start <article> 2 -->
 	<article>
-		<header class="card-title">
+		<header class="card_title">
 			<h1>[Title 2]</h1>
 		</header>
 
@@ -143,7 +143,7 @@
 
 	<!-- Start article 3 -->
 	<article>
-		<header class="card-title">
+		<header class="card_title">
 			<h1>[Title 3]</h1>
 		</header>
 
@@ -201,7 +201,7 @@
 
 	<!-- Start article 4 -->
 	<article>
-		<header class="card-title">
+		<header class="card_title">
 			<h1>[Title 4]</h1>
 		</header>
 
@@ -258,6 +258,9 @@
 
 </div>
 
+<footer id="main-footer">
+&copy;2016 [Chase Ramsey]
+</footer>
 
 </body>
 </html>
