Created placeholders with captions for images

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<img src="">
-				<figcaption></figcaption>
+				<div class="placeholder"></div>
+				<figcaption>Placeholder</figcaption>
 			</figure>
 
 			<div class="product_desc">
@@ -92,8 +92,8 @@
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<img src="">
-				<figcaption></figcaption>
+				<div class="placeholder"></div>
+				<figcaption>Placeholder</figcaption>
 			</figure>
 
 			<div class="product_desc">
@@ -150,8 +150,8 @@
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<img src="">
-				<figcaption></figcaption>
+				<div class="placeholder"></div>
+				<figcaption>Placeholder</figcaption>
 			</figure>
 
 			<div class="product_desc">
@@ -208,8 +208,8 @@
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<img src="">
-				<figcaption></figcaption>
+				<div class="placeholder"></div>
+				<figcaption>Placeholder</figcaption>
 			</figure>
 
 			<div class="product_desc">
