Completed styling and formatting with placeholder content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <!-- This <div> id #wrapper will group all of the main content in the body. Its direct children are the article cards.
-		 "#wrapper: padding-top" is set to 100px to push the #wrapper out from under the header. 														-->
+		 "#wrapper: padding-top" is set to 80px to push the #wrapper out from under the header. 														-->
 	<div id="wrapper" class="clearfix">
 
 	<!-- Start <article> 1 -->
@@ -39,42 +39,51 @@
 			</figure>
 
 			<div class="product_desc">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sem vel nisi pellentesque semper. Nulla et elit lorem. Vivamus sodales justo mauris, vitae luctus purus condimentum volutpat. Aliquam tempor non lectus a commodo. Nulla nec ultricies nibh, sed interdum metus. Quisque ac tincidunt felis. Sed id sodales nisl.</p>
 			</div>
 
-			<div class="product_avail">
+			<div class="product_avail_logo">
+				Available!
 			</div>
 
 		</section>									<!-- End <section> .product -->
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="specs_title">
+			<header class="h2_title">
 				<h2>Specifications</h2>
 			</header>
 
-			<div class="specs_size">
+			<div class="list">
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
 			</div>
 
-			<div class="specs_size">
+			<div class="list">
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
 			</div>
 
 			<footer class="specs_foot">
+				Specifications valid until 04/08/17
 			</footer>
 
 		</section>									<!-- End <section> .specs -->
 
 		<section class-"pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="pricing_title">
+			<header class="h2_title">
+				<h2>Pricing</h2>
 			</header>
 
 			<div class="pricing_qty">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
 			<div class="pricing_qty">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
 			<div class="pricing_qty">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -97,42 +106,51 @@
 			</figure>
 
 			<div class="product_desc">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sem vel nisi pellentesque semper. Nulla et elit lorem. Vivamus sodales justo mauris, vitae luctus purus condimentum volutpat. Aliquam tempor non lectus a commodo. Nulla nec ultricies nibh, sed interdum metus. Quisque ac tincidunt felis. Sed id sodales nisl.</p>
 			</div>
 
-			<div class="product_avail">
+			<div class="product_avail_logo">
+				Available!
 			</div>
 
 		</section>									<!-- End <section> .product -->
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="specs_title">
+			<header class="h2_title">
 				<h2>Specifications</h2>
 			</header>
 
-			<div class="specs_size">
+			<div class="list">
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
 			</div>
 
-			<div class="specs_size">
+			<div class="list">
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
 			</div>
 
 			<footer class="specs_foot">
+				Specifications valid until 04/08/17
 			</footer>
 
 		</section>									<!-- End <section> .specs -->
 
 		<section class-"pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="pricing_title">
+			<header class="h2_title">
+				<h2>Pricing<h2>
 			</header>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -155,42 +173,51 @@
 			</figure>
 
 			<div class="product_desc">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sem vel nisi pellentesque semper. Nulla et elit lorem. Vivamus sodales justo mauris, vitae luctus purus condimentum volutpat. Aliquam tempor non lectus a commodo. Nulla nec ultricies nibh, sed interdum metus. Quisque ac tincidunt felis. Sed id sodales nisl.</p>
 			</div>
 
-			<div class="product_avail">
+			<div class="product_avail_logo">
+				Available!
 			</div>
 
 		</section>									<!-- End <section> .product -->
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="specs_title">
+			<header class="h2_title">
 				<h2>Specifications</h2>
 			</header>
 
-			<div class="specs_size">
+			<div class="list">
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
 			</div>
 
-			<div class="specs_size">
+			<div class="list">
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
 			</div>
 
-			<footer class="specs_foot">
+			<footer class="list">
+				Specifications valid until 04/08/17
 			</footer>
 
 		</section>									<!-- End <section> .specs -->
 
 		<section class-"pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="pricing_title">
+			<header class="h2_title">
+				<h2>Pricing</h2>
 			</header>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -213,42 +240,51 @@
 			</figure>
 
 			<div class="product_desc">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae sem vel nisi pellentesque semper. Nulla et elit lorem. Vivamus sodales justo mauris, vitae luctus purus condimentum volutpat. Aliquam tempor non lectus a commodo. Nulla nec ultricies nibh, sed interdum metus. Quisque ac tincidunt felis. Sed id sodales nisl.</p>
 			</div>
 
-			<div class="product_avail">
+			<div class="product_avail_logo">
+				Available!
 			</div>
 
 		</section>									<!-- End <section> .product -->
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="specs_title">
+			<header class="h2_title">
 				<h2>Specifications</h2>
 			</header>
 
-			<div class="specs_size">
+			<div class="list">
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
 			</div>
 
-			<div class="specs_size">
+			<div class="list">
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
 			</div>
 
 			<footer class="specs_foot">
+				Specifications valid until 04/08/17
 			</footer>
 
 		</section>									<!-- End <section> .specs -->
 
 		<section class-"pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="pricing_title">
+			<header class="h2_title">
+				<h2>Pricing</h2>
 			</header>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
+				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
