Added images and card titles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header id="main-header" class="clearfix">
-<h1><a href="#">[Store Name TBD]</a></h1>
+<h1><a href="#"><span class="u_logo">YOU</span>nicorn</a></h1>
 	<nav>
 		<ul>
 			<li><a href="#" alt="Contact">Contact</a></li>
@@ -28,13 +28,13 @@
 	<!-- Start <article> 1 -->
 	<article>
 		<header class="card_title">
-			<h1>[Title 1]</h1>
+			<h1>The Starchaser</h1>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<div class="placeholder"></div>
+				<img class="card_img" src="img/unicorn-2.jpg">
 				<figcaption>Placeholder</figcaption>
 			</figure>
 
@@ -74,15 +74,15 @@
 				<h2>Pricing</h2>
 			</header>
 
-			<div class="pricing_qty">
+			<div class="list">
 				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
 				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
-			<div class="pricing_qty">
+			<div class="list">
 				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
 			</div>
 
@@ -95,13 +95,13 @@
 	<!-- Start <article> 2 -->
 	<article>
 		<header class="card_title">
-			<h1>[Title 2]</h1>
+			<h1>The Wanderer</h1>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<div class="placeholder"></div>
+				<img class="card_img" src="img/unicorn-3.jpg">
 				<figcaption>Placeholder</figcaption>
 			</figure>
 
@@ -162,13 +162,13 @@
 	<!-- Start article 3 -->
 	<article>
 		<header class="card_title">
-			<h1>[Title 3]</h1>
+			<h1>The Untameable</h1>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<div class="placeholder"></div>
+				<img class="card_img" src="img/unicorn-1.jpg">
 				<figcaption>Placeholder</figcaption>
 			</figure>
 
@@ -229,13 +229,13 @@
 	<!-- Start article 4 -->
 	<article>
 		<header class="card_title">
-			<h1>[Title 4]</h1>
+			<h1>The Dawnracer</h1>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
 
 			<figure class="product_img">
-				<div class="placeholder"></div>
+				<img class="card_img" src="img/unicorn-4.jpg">
 				<figcaption>Placeholder</figcaption>
 			</figure>
 
