Added hover state to figcaption with image credits

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 
 			<figure class="product_img">
 				<img class="card_img" src="img/unicorn-2.jpg">
-				<figcaption>Placeholder</figcaption>
+				<figcaption class="fig_hover">
+					Trace the constellations
+					<p>
+						Image source: wall.alphacoders.com
+					</p>
+				</figcaption>
 			</figure>
 
 			<div class="product_desc">
@@ -102,7 +107,12 @@
 
 			<figure class="product_img">
 				<img class="card_img" src="img/unicorn-3.jpg">
-				<figcaption>Placeholder</figcaption>
+				<figcaption class="fig_hover">
+					Never stop searching
+					<p>
+						Image source: noblestallion.wordpress.com
+					</p>
+				</figcaption>
 			</figure>
 
 			<div class="product_desc">
@@ -169,7 +179,12 @@
 
 			<figure class="product_img">
 				<img class="card_img" src="img/unicorn-1.jpg">
-				<figcaption>Placeholder</figcaption>
+				<figcaption class="fig_hover">
+					Leave them in your dust
+					<p>
+						Image source: www.modernmysteryschoolint.com
+					</p>
+				</figcaption>
 			</figure>
 
 			<div class="product_desc">
@@ -196,7 +211,7 @@
 				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
 			</div>
 
-			<footer class="list">
+			<footer class="specs_foot">
 				Specifications valid until 04/08/17
 			</footer>
 
@@ -236,7 +251,12 @@
 
 			<figure class="product_img">
 				<img class="card_img" src="img/unicorn-4.jpg">
-				<figcaption>Placeholder</figcaption>
+				<figcaption class="fig_hover">
+					Show the sun who's boss
+					<p>
+						Image source: www.fanpop.com
+					</p>
+				</figcaption>
 			</figure>
 
 			<div class="product_desc">
@@ -295,7 +315,7 @@
 </div>
 
 <footer id="main-footer">
-&copy;2016 [Chase Ramsey]
+&copy;2016 YOUnicorn Inc.
 </footer>
 
 </body>
