Added specs and pricing info

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 			</header>
 
 			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">16.7 h</span>
 			</div>
 
 			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">575 kg</span>
 			</div>
 
 			<footer class="specs_foot">
@@ -80,15 +80,15 @@
 			</header>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,000</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$950</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$875</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -132,11 +132,11 @@
 			</header>
 
 			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">16.0 h</span>
 			</div>
 
 			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">542 kg</span>
 			</div>
 
 			<footer class="specs_foot">
@@ -152,15 +152,15 @@
 			</header>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,150</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,100</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,025</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -204,11 +204,11 @@
 			</header>
 
 			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">17.2 h</span>
 			</div>
 
 			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">602 kg</span>
 			</div>
 
 			<footer class="specs_foot">
@@ -224,15 +224,15 @@
 			</header>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,250</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,200</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,025</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -276,11 +276,11 @@
 			</header>
 
 			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn" x nn"</span>
+				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">16.5 h</span>
 			</div>
 
 			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">nn oz.</span>
+				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">554 kg</span>
 			</div>
 
 			<footer class="specs_foot">
@@ -296,15 +296,15 @@
 			</header>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,400</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,350</span>
 			</div>
 
 			<div class="list">
-				x-xx: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$n.nn - $n.nn</span>
+				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,275</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
