--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>HTML Quiz | Chase Ramsey</title>
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/stylez.css">
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,300italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/stylez.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,300italic" rel="stylesheet">
 </head>
 <body>
 
@@ -14,9 +14,9 @@
 <h1><a href="#"><span class="u_logo">YOU</span>nicorn</a></h1>
 	<nav>
 		<ul>
-			<li><a href="#" alt="Contact">Contact</a></li>
-			<li><a href="#" alt="About">About</a></li>
-			<li><a href="#" alt="Home">Home</a></li>
+			<li><a href="#">Contact</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Home</a></li>
 		</ul>
 	</nav>
 </header>
@@ -28,7 +28,7 @@
 	<!-- Start <article> 1 -->
 	<article>
 		<header class="card_title">
-			<h1>The Starchaser</h1>
+			<h2>The Starchaser</h2>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
@@ -55,8 +55,8 @@
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="h2_title">
-				<h2>Specifications</h2>
+			<header class="h3_title">
+				<h3>Specifications</h3>
 			</header>
 
 			<div class="list">
@@ -73,10 +73,10 @@
 
 		</section>									<!-- End <section> .specs -->
 
-		<section class-"pricing">		<!-- Begin <section> .pricing -->
+		<section class="pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="h2_title">
-				<h2>Pricing</h2>
+			<header class="h3_title">
+				<h3>Pricing</h3>
 			</header>
 
 			<div class="list">
@@ -100,7 +100,7 @@
 	<!-- Start <article> 2 -->
 	<article>
 		<header class="card_title">
-			<h1>The Wanderer</h1>
+			<h2>The Wanderer</h2>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
@@ -127,8 +127,8 @@
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="h2_title">
-				<h2>Specifications</h2>
+			<header class="h3_title">
+				<h3>Specifications</h3>
 			</header>
 
 			<div class="list">
@@ -145,10 +145,10 @@
 
 		</section>									<!-- End <section> .specs -->
 
-		<section class-"pricing">		<!-- Begin <section> .pricing -->
+		<section class="pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="h2_title">
-				<h2>Pricing<h2>
+			<header class="h3_title">
+				<h3>Pricing</h3>
 			</header>
 
 			<div class="list">
@@ -172,7 +172,7 @@
 	<!-- Start article 3 -->
 	<article>
 		<header class="card_title">
-			<h1>The Untameable</h1>
+			<h2>The Untameable</h2>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
@@ -199,8 +199,8 @@
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="h2_title">
-				<h2>Specifications</h2>
+			<header class="h3_title">
+				<h3>Specifications</h3>
 			</header>
 
 			<div class="list">
@@ -217,10 +217,10 @@
 
 		</section>									<!-- End <section> .specs -->
 
-		<section class-"pricing">		<!-- Begin <section> .pricing -->
+		<section class="pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="h2_title">
-				<h2>Pricing</h2>
+			<header class="h3_title">
+				<h3>Pricing</h3>
 			</header>
 
 			<div class="list">
@@ -244,7 +244,7 @@
 	<!-- Start article 4 -->
 	<article>
 		<header class="card_title">
-			<h1>The Dawnracer</h1>
+			<h2>The Dawnracer</h2>
 		</header>
 
 		<section class="product">		<!-- Begin <section> .product -->
@@ -271,8 +271,8 @@
 
 		<section class="specs">			<!-- Begin <section> .specs -->
 
-			<header class="h2_title">
-				<h2>Specifications</h2>
+			<header class="h3_title">
+				<h3>Specifications</h3>
 			</header>
 
 			<div class="list">
@@ -289,10 +289,10 @@
 
 		</section>									<!-- End <section> .specs -->
 
-		<section class-"pricing">		<!-- Begin <section> .pricing -->
+		<section class="pricing">		<!-- Begin <section> .pricing -->
 
-			<header class="h2_title">
-				<h2>Pricing</h2>
+			<header class="h3_title">
+				<h3>Pricing</h3>
 			</header>
 
 			<div class="list">
