Fixed &nbsp; issue using floated columns

--- a/index.html
+++ b/index.html
@@ -59,12 +59,18 @@
 				<h3>Specifications</h3>
 			</header>
 
-			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">16.7 h</span>
-			</div>
+			<div class="list clearfix">
 
-			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">575 kg</span>
+				<div class="col left">
+					<p>Size:</p>
+					<p>Weight:</p>
+				</div>
+
+				<div class="col right">
+					<p class="strong">16.7 h</p>
+					<p class="strong">575 kg</p>
+				</div>
+
 			</div>
 
 			<footer class="specs_foot">
@@ -79,16 +85,20 @@
 				<h3>Pricing</h3>
 			</header>
 
-			<div class="list">
-				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,000</span>
-			</div>
+			<div class="list clearfix">
 
-			<div class="list">
-				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$950</span>
-			</div>
+				<div class="col left">
+					<p>1:</p>
+					<p>2-5:</p>
+					<p>5+:</p>
+				</div>
 
-			<div class="list">
-				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$875</span>
+				<div class="col right">
+					<p class="strong">$1000</p>
+					<p class="strong">$950</p>
+					<p class="strong">$875</p>
+				</div>
+
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -131,12 +141,18 @@
 				<h3>Specifications</h3>
 			</header>
 
-			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">16.0 h</span>
-			</div>
+			<div class="list clearfix">
 
-			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">542 kg</span>
+				<div class="col left">
+					<p>Size:</p>
+					<p>Weight:</p>
+				</div>
+
+				<div class="col right">
+					<p class="strong">16.0 h</p>
+					<p class="strong">542 kg</p>
+				</div>
+
 			</div>
 
 			<footer class="specs_foot">
@@ -151,16 +167,20 @@
 				<h3>Pricing</h3>
 			</header>
 
-			<div class="list">
-				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,150</span>
+			<div class="list clearfix">
+
+			<div class="col left">
+				<p>1:</p>
+				<p>2-5:</p>
+				<p>5+:</p>
 			</div>
 
-			<div class="list">
-				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,100</span>
-			</div>
+				<div class="col right">
+					<p class="strong">$1,150</p>
+					<p class="strong">$1,100</p>
+					<p class="strong">$1,025</p>
+				</div>
 
-			<div class="list">
-				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,025</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -203,12 +223,18 @@
 				<h3>Specifications</h3>
 			</header>
 
-			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">17.2 h</span>
-			</div>
+			<div class="list clearfix">
 
-			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">602 kg</span>
+				<div class="col left">
+					<p>Size:</p>
+					<p>Weight:</p>
+				</div>
+
+				<div class="col right">
+					<p class="strong">17.2 h</p>
+					<p class="strong">602 kg</p>
+				</div>
+
 			</div>
 
 			<footer class="specs_foot">
@@ -223,16 +249,20 @@
 				<h3>Pricing</h3>
 			</header>
 
-			<div class="list">
-				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,250</span>
-			</div>
+			<div class="list clearfix">
 
-			<div class="list">
-				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,200</span>
-			</div>
+				<div class="col left">
+					<p>1:</p>
+					<p>2-5:</p>
+					<p>5+:</p>
+				</div>
 
-			<div class="list">
-				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,025</span>
+				<div class="col right">
+					<p class="strong">$1,250</p>
+					<p class="strong">$1,200</p>
+					<p class="strong">$1,025</p>
+				</div>
+
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
@@ -275,12 +305,17 @@
 				<h3>Specifications</h3>
 			</header>
 
-			<div class="list">
-				Size: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">16.5 h</span>
-			</div>
+			<div class="list clearfix">
 
-			<div class="list">
-				Weight: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">554 kg</span>
+				<div class="col left">
+					<p>Size:</p>
+					<p>Weight:</p>
+				</div>
+
+				<div class="col right">
+					<p class="strong">16.5 h</p>
+					<p class="strong">554 kg</p>
+				</div>
 			</div>
 
 			<footer class="specs_foot">
@@ -295,16 +330,19 @@
 				<h3>Pricing</h3>
 			</header>
 
-			<div class="list">
-				1: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,400</span>
-			</div>
+			<div class="list clearfix">
 
-			<div class="list">
-				2-5: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,350</span>
-			</div>
+				<div class="col left">
+					<p>1:</p>
+					<p>2-5:</p>
+					<p>5+:</p>
+				</div>
+				<div class="col right">
+					<p class="strong">$1,400</p>
+					<p class="strong">$1,350</p>
+					<p class="strong">$1,275</p>
+				</div>
 
-			<div class="list">
-				5+: &nbsp;&nbsp;&nbsp;&nbsp;<span class="strong">$1,275</span>
 			</div>
 
 		</section>									<!-- End <section> .pricing -->
