Removed id selectors from CSS and replaced with class selectors; added class names to HTML as needed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<header id="main-header" class="clearfix">
+<header id="main-header" class="main-header clearfix">
 <h1><a href="#"><span class="u_logo">YOU</span>nicorn</a></h1>
 	<nav>
 		<ul>
@@ -23,7 +23,7 @@
 
 <!-- This <div> id #wrapper will group all of the main content in the body. Its direct children are the article cards.
 		 "#wrapper: padding-top" is set to 80px to push the #wrapper out from under the header. 														-->
-	<div id="wrapper" class="clearfix">
+	<div id="wrapper" class="wrapper clearfix">
 
 	<!-- Start <article> 1 -->
 	<article>
@@ -352,7 +352,7 @@
 
 </div>
 
-<footer id="main-footer">
+<footer id="main-footer" class="main-footer">
 &copy;2016 YOUnicorn Inc.
 </footer>
 
